--- a/src/app/draft-overview/draft-form/draft-form-edit/draft-form-edit.component.html
+++ b/src/app/draft-overview/draft-form/draft-form-edit/draft-form-edit.component.html
@@ -13,9 +13,13 @@
         <p class="text-3xl font-nasa">Edit League</p>
       </div>
     </div>
-    <draft-form-core
-      [draftForm]="draftForm"
-      (formSubmitted)="editDraft($event)"
-    ></draft-form-core>
+    @if (draftForm) {
+      <draft-form-core
+        [draftForm]="draftForm"
+        (formSubmitted)="editDraft($event)"
+      ></draft-form-core>
+    } @else {
+      <loading></loading>
+    }
   </div>
 </div>
