--- a/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
@@ -2,17 +2,19 @@
   [formGroup]="opponentForm"
   (ngSubmit)="onSubmit()"
   (keydown.enter)="$event.preventDefault()"
-  class="p-2 m-2 space-y-3 shadow-md bg-bTeam-300 team shadow-bTeam-600 rounded-xl"
+  class="p-2 m-2 space-y-3 shadow-md team bg-bTeam-300 shadow-bTeam-600 rounded-xl"
 >
-  <div class="w-full">
-    <div class="grid grid-cols-2 sm:grid-cols-4 gap-x-4">
+  <div class="w-full p-2 lg:space-x-2 lg:flex">
+    <div
+      class="grid flex-shrink-0 w-full grid-cols-1 lg:w-112 sm:grid-cols-2 gap-x-2 lg:grid-cols-1 h-fit"
+    >
       <div>
         <label class="block mb-1 font-bold">Team Name</label>
         <input
           formControlName="teamName"
           spellcheck="false"
           placeholder="Deimos Deoxys"
-          class="w-full px-4 py-2 placeholder:text-symbolColor-disabled text-symbolColor-main text-center rounded-full shadow-md bg-bTeam-200 focus:outline-none focus:ring-2 focus:ring-bTeam-500 focus:bg-bTeam-100"
+          class="w-full px-4 py-2 text-center rounded-full shadow-md placeholder:text-symbolColor-disabled text-symbolColor-main bg-bTeam-200 focus:outline-none focus:ring-2 focus:ring-bTeam-500 focus:bg-bTeam-100"
         />
       </div>
       <div>
@@ -21,79 +23,28 @@
           placeholder="Week 1"
           spellcheck="false"
           formControlName="stage"
-          class="w-full px-4 py-2 text-symbolColor-main placeholder:text-symbolColor-disabled text-center rounded-full shadow-md bg-bTeam-200 focus:outline-none focus:ring-2 focus:ring-bTeam-500 focus:bg-bTeam-100"
+          class="w-full px-4 py-2 text-center rounded-full shadow-md text-symbolColor-main placeholder:text-symbolColor-disabled bg-bTeam-200 focus:outline-none focus:ring-2 focus:ring-bTeam-500 focus:bg-bTeam-100"
         />
       </div>
     </div>
+
+    <div class="flex-grow min-h-full space-y-1">
+      <label class="font-bold" for="team">Team</label>
+      <div id="team" class="shadow-md rounded-xl">
+        <team-form formControlName="team" color="bTeam"></team-form>
+      </div>
+    </div>
   </div>
-  <div class="p-2 border-2 border-bTeam-200 rounded-xl">
-    <ng-container *ngIf="!importing; else importMenu">
-      <div class="flex w-full items-center justify-between">
-        <div class="px-4 w-full max-w-160">
-          <select-search
-            [placeholder]="'Add a Pokemon'"
-            class="rounded-lg bg-bTeam-100 shadow-md shadow-bTeam-400"
-            (itemSelected)="
-              $event ? addNewPokemon(teamArray.controls.length, $event) : ''
-            "
-            [items]="names"
-          ></select-search>
-        </div>
-        <button
-          type="button"
-          (click)="importing = true"
-          class="flex items-center justify-center w-32 h-6 px-1 my-3 font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
-        >
-          Import
-          <import-svg class="h-full"></import-svg>
-        </button>
-      </div>
-      <div class="grid min-h-48 gap-x-4 md:grid-cols-1 lg:grid-cols-2">
-        @for (pokemonForm of teamArray.controls; track $index) {
-        <pokemon-form
-          [pokemonForm]="$any(pokemonForm)"
-          [formIndex]="$index"
-          bg="bTeam-100"
-          (deletePokemonEvent)="deletePokemon($event)"
-          (addPokemonEvent)="addNewPokemon($index + 1, $event)"
-        ></pokemon-form>
-        }
-      </div>
-    </ng-container>
-    <ng-template #importMenu>
+
+  @if (!importing) {
+    <div class="flex justify-end w-full">
       <button
-        type="button"
-        (click)="importing = false"
-        class="flex items-center justify-center w-32 h-6 px-1 my-3 font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
+        type="submit"
+        class="w-24 p-1 mx-4 text-xl font-bold shadow rounded-xl bg-menu-200 hover:bg-menu-100 shadow-menu-600"
       >
-        Cancel
+        Submit
       </button>
-      <div class="flex justify-center w-full">
-        <button
-          type="button"
-          (click)="importPokemon(textAreaInfo.value)"
-          class="w-32 px-1 my-3 font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
-        >
-          Import
-        </button>
-      </div>
-      <div class="flex justify-center w-full">
-        <textarea
-          #textAreaInfo
-          spellcheck="false"
-          class="w-2/3 p-2 bg-page rounded resize-none h-96 max-w-128"
-          placeholder="Deoxys&#10;Minior&#10;Clefable&#10;..."
-        ></textarea>
-      </div>
-    </ng-template>
-  </div>
-  <div class="flex justify-end w-full" *ngIf="!importing">
-    <button
-      type="submit"
-      class="w-24 p-1 mx-4 text-xl font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
-    >
-      Submit
-    </button>
-  </div>
+    </div>
+  }
 </form>
 <!-- {{ opponentForm.value | json }} -->
