--- a/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
@@ -31,7 +31,11 @@
     <div class="flex-grow min-h-full space-y-1">
       <label class="font-bold" for="team">Team</label>
       <div id="team" class="shadow-md rounded-xl">
-        <team-form formControlName="team" color="bTeam"></team-form>
+        <team-form
+          formControlName="team"
+          [maxCols]="2"
+          color="bTeam"
+        ></team-form>
       </div>
     </div>
   </div>
