fix import and submit form bugs

--- a/src/app/opponent-overview/opponent-form/opponent-form-new/opponent-form-new.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form-new/opponent-form-new.component.html
@@ -10,7 +10,7 @@
         Cancel
       </button>
       <div>
-        <p class="text-3xl font-bold">Edit Opponent</p>
+        <p class="text-3xl font-bold">New Opponent</p>
       </div>
     </div>
     @if (opponentForm) {
