--- a/src/app/matchup-overview/matchup-overview.component.html
+++ b/src/app/matchup-overview/matchup-overview.component.html
@@ -4,8 +4,8 @@
   <div class="flex px-2 pt-2">
     <div class="w-fit">
       <button
-        routerLink="['/', draftPath]/{{ leagueId }}"
-        class="px-3 py-2 text-sm text-symbolColor-inverted rounded-md bg-menu-500 hover:bg-menu-600 focus:outline-none focus:bg-menu-600"
+        [routerLink]="['/', draftPath, leagueId]"
+        class="px-3 py-2 text-sm rounded-md text-symbolColor-inverted bg-menu-500 hover:bg-menu-600 focus:outline-none focus:bg-menu-600"
       >
         Back
       </button>
@@ -37,7 +37,7 @@
     </div>
     <div class="flex items-start justify-end w-fit">
       <button
-        class="px-3 py-2 text-sm text-symbolColor-inverted rounded-md bg-menu-500 hover:bg-menu-600 focus:outline-none focus:bg-menu-600"
+        class="px-3 py-2 text-sm rounded-md text-symbolColor-inverted bg-menu-500 hover:bg-menu-600 focus:outline-none focus:bg-menu-600"
         (click)="shared = true"
       >
         Share
@@ -49,7 +49,7 @@
     class="fixed inset-0 z-30 flex flex-col items-center justify-center bg-opacity-50 bg-menu-800"
   >
     <div
-      class="w-5/6 bg-menu-100 rounded-lg shadow-lg md:w-2/3 lg:w-1/2 xl:w-1/3"
+      class="w-5/6 rounded-lg shadow-lg bg-menu-100 md:w-2/3 lg:w-1/2 xl:w-1/3"
     >
       <div class="flex justify-end w-full">
         <close-svg
