fix quick matchup scaling

--- a/src/app/util/forms/pokemon-form/pokemon-form.component.html
+++ b/src/app/util/forms/pokemon-form/pokemon-form.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="pokemonForm" class="{{ class }}" autocomplete="off">
   <div class="flex items-center w-full">
     <div
-      class="relative h-32 col-span-2 sm:col-span-1 aspect-square"
+      class="relative h-20 col-span-2 sm:h-24 md:h-28 lg:h-32 sm:col-span-1 aspect-square"
       (click)="toggleControl('shiny')"
     >
       <sprite
