--- a/src/app/tools/quick-matchup/form/quick-matchup-form.component.html
+++ b/src/app/tools/quick-matchup/form/quick-matchup-form.component.html
@@ -5,11 +5,11 @@
   class="p-2 m-2 space-y-3 shadow-md team bg-menu-300 shadow-menu-600 rounded-xl"
 >
   <div class="w-full">
-    <div class="grid grid-cols-2 sm:grid-cols-2 gap-x-4">
+    <div class="grid grid-cols-2 gap-x-4">
       <div>
         <label class="block mb-1 font-bold">Format</label>
         <div
-          class="w-full px-2 text-symbolColor-main text-center rounded-full shadow-md bg-menu-200 focus:outline-none focus:ring-2 focus:ring-menu-500 focus:bg-menu-100"
+          class="w-full px-2 text-center rounded-full shadow-md text-symbolColor-main bg-menu-200 focus:outline-none focus:ring-2 focus:ring-menu-500 focus:bg-menu-100"
         >
           <select-no-search
             [items]="formats"
@@ -21,7 +21,7 @@
       <div>
         <label class="block mb-1 font-bold">Ruleset</label>
         <div
-          class="w-full px-2 text-symbolColor-main text-center rounded-full shadow-md bg-menu-200 focus:outline-none focus:ring-2 focus:ring-menu-500 focus:bg-menu-100"
+          class="w-full px-2 text-center rounded-full shadow-md text-symbolColor-main bg-menu-200 focus:outline-none focus:ring-2 focus:ring-menu-500 focus:bg-menu-100"
         >
           <select-no-search
             [items]="rulesets"
@@ -33,18 +33,30 @@
     </div>
   </div>
 
-  <div class="flex w-full p-2 space-x-2">
-    <div class="w-1/2 border-2 border-aTeam-300">
-      <team-form formControlName="team1" color="aTeam"></team-form>
+  <div class="grid w-full grid-cols-1 gap-4 p-2 lg:grid-cols-2">
+    <div>
+      <label for="team1form" class="font-nasa">Team 1</label>
+      <team-form
+        id="team1form"
+        extraClass="border-2 rounded-xl border-aTeam-300"
+        formControlName="team1"
+        color="aTeam"
+      ></team-form>
     </div>
-    <div class="w-1/2 border-2 border-bTeam-300">
-      <team-form formControlName="team2" color="bTeam"></team-form>
+    <div>
+      <label for="team1form" class="font-nasa">Team 1</label>
+      <team-form
+        id="team2form"
+        extraClass="border-2 rounded-xl border-bTeam-300"
+        formControlName="team2"
+        color="bTeam"
+      ></team-form>
     </div>
   </div>
   <div class="flex justify-end w-full">
     <button
       type="submit"
-      class="w-fit py-1 px-3 mx-4 text-xl font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
+      class="px-3 py-1 mx-4 text-xl font-bold rounded-full shadow w-fit bg-menu-200 hover:bg-menu-100 shadow-menu-600"
     >
       View Matchup
     </button>
