--- a/src/app/tools/quick-matchup/quick-matchup-base.component.html
+++ b/src/app/tools/quick-matchup/quick-matchup-base.component.html
@@ -1,54 +1,58 @@
-<div class="flex flex-col items-center">
-  @if (editing) {
-    <div class="flex items-center justify-between p-4">
-      <div class="flex-grow text-5xl text-center font-nasa">Quick Matchup</div>
-    </div>
-    <div class="w-full max-w-400">
-      <quick-matchup-form
-        (formSubmitted)="getMatchupData($event)"
-      ></quick-matchup-form>
-    </div>
-  } @else {
+@if (editing) {
+  <div class="flex items-center justify-between p-2">
     <div
-      class="min-h-full bg-gradient-to-r from-aTeam-100 via-menu-100 to-bTeam-100"
+      class="flex-grow text-2xl text-center md:text-3xl lg:text-4xl font-nasa"
     >
-      <div class="flex items-center justify-between p-4">
-        @if (!editing) {
-          <div class="w-1/8">
-            <button
-              (click)="editing = true"
-              class="px-3 py-2 m-2 text-sm rounded-md text-symbolColor-inverted bg-menu-500 hover:bg-menu-600 focus:outline-none focus:bg-menu-600"
-            >
-              Edit Matchup
-            </button>
-          </div>
-        }
-
-        <div class="flex-grow text-5xl text-center font-nasa">
-          Quick Matchup
+      Quick Matchup
+    </div>
+  </div>
+  <div class="w-full max-w-400">
+    <quick-matchup-form
+      (formSubmitted)="getMatchupData($event)"
+    ></quick-matchup-form>
+  </div>
+} @else {
+  <div
+    class="min-h-full bg-gradient-to-r from-aTeam-100 via-menu-100 to-bTeam-100"
+  >
+    <div class="flex items-center justify-between p-4">
+      @if (!editing) {
+        <div class="w-1/8">
+          <button
+            (click)="editing = true"
+            class="px-3 py-2 m-2 text-sm rounded-md text-symbolColor-inverted bg-menu-500 hover:bg-menu-600 focus:outline-none focus:bg-menu-600"
+          >
+            Edit
+          </button>
         </div>
+      }
 
-        @if (!editing) {
-          <div class="w-1/8"></div>
-        }
+      <div
+        class="flex-grow text-2xl text-center md:text-3xl lg:text-4xl font-nasa"
+      >
+        Quick Matchup
       </div>
-      <div class="flex justify-center w-full pt-2">
-        <div *ngIf="matchupData" class="flex flex-wrap justify-between gap-x-8">
-          <div class="w-full text-center sm:w-auto">
-            <p class="text-sm font-semibold text-menu-500">Ruleset</p>
-            <p class="text-xl font-bold">{{ matchupData.details.ruleset }}</p>
-          </div>
-          <div class="w-full text-center sm:w-auto">
-            <p class="text-sm font-semibold text-menu-500">Format</p>
-            <p class="text-xl font-bold">{{ matchupData.details.format }}</p>
-          </div>
-        </div>
-      </div>
-      @if (matchupData) {
-        <matchup [matchupData]="matchupData"></matchup>
-      } @else {
-        <loading></loading>
+
+      @if (!editing) {
+        <div class="w-1/8"></div>
       }
     </div>
-  }
-</div>
+    <div class="flex justify-center w-full">
+      <div *ngIf="matchupData" class="flex flex-wrap justify-between gap-x-8">
+        <div class="w-full text-center sm:w-auto">
+          <p class="text-sm font-semibold text-menu-500">Ruleset</p>
+          <p class="text-xl font-bold">{{ matchupData.details.ruleset }}</p>
+        </div>
+        <div class="w-full text-center sm:w-auto">
+          <p class="text-sm font-semibold text-menu-500">Format</p>
+          <p class="text-xl font-bold">{{ matchupData.details.format }}</p>
+        </div>
+      </div>
+    </div>
+    @if (matchupData) {
+      <matchup [matchupData]="matchupData"></matchup>
+    } @else {
+      <loading></loading>
+    }
+  </div>
+}
