--- a/src/app/util/forms/team-form/team-form.component.html
+++ b/src/app/util/forms/team-form/team-form.component.html
@@ -1,4 +1,4 @@
-<div class="w-full p-2  bg-{{ color }}-200  rounded-xl">
+<div class="w-full p-2 bg-{{ color }}-200 {{ extraClass }}">
   @if (!importing) {
     <div class="flex items-center justify-between w-full">
       <div class="w-full max-w-sm px-4">
