--- a/src/app/tools/quick-matchup/quick-matchup-base.component.html
+++ b/src/app/tools/quick-matchup/quick-matchup-base.component.html
@@ -6,10 +6,12 @@
       Quick Matchup
     </div>
   </div>
-  <div class="w-full max-w-400">
-    <quick-matchup-form
-      (formSubmitted)="getMatchupData($event)"
-    ></quick-matchup-form>
+  <div class="flex justify-center w-full">
+    <div class="w-full max-w-400">
+      <quick-matchup-form
+        (formSubmitted)="getMatchupData($event)"
+      ></quick-matchup-form>
+    </div>
   </div>
 } @else {
   <div
