--- a/src/app/planner/moves/moves.component.html
+++ b/src/app/planner/moves/moves.component.html
@@ -1,10 +1,10 @@
 <div class="h-full overflow-y-auto">
   <div class="flex justify-between px-4">
-    <div class="space-x-2 flex items-center">
+    <div class="flex items-center space-x-2">
       <label for="unlearned">Show Unlearned</label>
       <input #unlearned [(ngModel)]="showUnlearned" type="checkbox" />
     </div>
-    <!-- <div class="space-x-2 flex items-center">
+    <!-- <div class="flex items-center space-x-2">
       <label for="unlearned">Collapse</label>
       <div
         class="items-center justify-end w-4 h-4 m-2 ml-auto border rounded cursor-pointer border-menu-500 bg-menu-400 hover:bg-menu-200"
