fix format not saving on save to new team

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -47,7 +47,9 @@
     <div
       class="flex-grow w-full px-8 py-4 overflow-y-auto border shadow h-min-0 rounded-xl bg-menu-300 border-menu-400"
     >
-      <h2 class="pb-2 text-2xl font-bold">News and Updates</h2>
+      <h2 class="pb-2 w-full text-center text-2xl font-bold">
+        News and Updates
+      </h2>
       <news-core></news-core>
     </div>
   </div>
