--- a/src/app/matchup-overview/matchup/movechart/move-category/move-category.component.html
+++ b/src/app/matchup-overview/matchup/movechart/move-category/move-category.component.html
@@ -1,5 +1,5 @@
 <div
-  (click)="show = !show"
+  (click)="toggleShow()"
   class="sticky top-0 left-0 z-10 flex w-full text-lg font-bold border-t border-b sm:min-w-96 bg-menu-300 border-menu-400"
 >
   <div class="flex items-center justify-center flex-grow text-center">
@@ -8,34 +8,39 @@
   <div
     class="items-center justify-end w-4 h-4 m-2 ml-auto border rounded cursor-pointer border-menu-500 bg-menu-400 hover:bg-menu-200"
   >
-    <minus-svg *ngIf="show" class="h-full" title="Hide"></minus-svg>
-    <plus-svg
-      *ngIf="!show"
-      class="h-full stroke-symbolColor-main"
-      title="Expand"
-    ></plus-svg>
+    @if (show) {
+      <minus-svg class="h-full" title="Hide"></minus-svg>
+    } @else {
+      <plus-svg
+        class="h-full stroke-symbolColor-main"
+        title="Expand"
+      ></plus-svg>
+    }
   </div>
 </div>
 
-<div *ngIf="show" @growIn class="z-10 grid gap-x-1" [ngClass]="getCols()">
-  @for (move of category.moves; track $index) { @if (unlearned ||
-  move.pokemon.length > 0) {
-  <div class="flex border-y border-menu-400 bg-menu-200">
-    <div class="flex items-center w-1/3 p-1 border-r border-menu-400">
-      <p
-        class="w-full py-1 font-semibold text-xs md:text-sm text-center overflow-hidden border-2 rounded"
-        [ngClass]="typeBorder(move.type)"
-      >
-        {{ move.name }}
-      </p>
-    </div>
-    <div class="flex flex-row flex-wrap items-center w-2/3 p-1">
-      <sprite
-        class="h-8"
-        *ngFor="let pokemon of move.pokemon"
-        [pokemon]="pokemon"
-      ></sprite>
-    </div>
+@if (show) {
+  <div @growIn class="z-10 grid gap-x-1" [ngClass]="getCols()">
+    @for (move of category.moves; track $index) {
+      @if (unlearned || move.pokemon.length > 0) {
+        <div class="flex border-y border-menu-400 bg-menu-200">
+          <div class="flex items-center w-1/3 p-1 border-r border-menu-400">
+            <p
+              class="w-full py-1 font-semibold text-xs md:text-sm text-center overflow-hidden border-2 rounded"
+              [ngClass]="typeBorder(move.type)"
+            >
+              {{ move.name }}
+            </p>
+          </div>
+          <div class="flex flex-row flex-wrap items-center w-2/3 p-1">
+            <sprite
+              class="h-8"
+              *ngFor="let pokemon of move.pokemon"
+              [pokemon]="pokemon"
+            ></sprite>
+          </div>
+        </div>
+      }
+    }
   </div>
-  } }
-</div>
+}
