--- a/src/app/matchup-overview/matchup/coveragechart/coveragechart.component.html
+++ b/src/app/matchup-overview/matchup/coveragechart/coveragechart.component.html
@@ -1,10 +1,16 @@
 <div class="">
   <div class="flex w-full px-1 bg-menu-400 rounded-t-xl">
-    <div class="flex w-full pb-1 border-b border-menu-300">
-      <h1 class="w-full text-xl font-bold text-center">Move Coverage</h1>
+    <div class="flex w-full px-1 py-0.5 border-b border-menu-300 items-center">
+      <button
+        (click)="updateAllCoverage()"
+        class="w-5 h-5 m-2 rounded cursor-pointer bg-menu-300 hover:bg-menu-200 shadow-md"
+      >
+        <reset-svg class="h-full" title="Reset"></reset-svg>
+      </button>
+      <h1 class="flex-grow text-xl font-bold text-center">Move Coverage</h1>
       <button
         (click)="swapTeams()"
-        class="px-3 mx-1 mt-2 ml-auto text-sm rounded-md shadow-md"
+        class="px-3 ml-auto text-sm rounded-md shadow-md"
         [ngClass]="clickColor(true)"
       >
         ⇄
